--- a/legio.cabal
+++ b/legio.cabal
@@ -40,6 +40,7 @@ executable legio-exe
   main-is: Main.hs
   other-modules:
       UI.ConsolePlayer
+      UI.DummyPlayer
       UI.Player
       Paths_legio
   hs-source-dirs:
