Add a neural-networking module and prepare initial weights.

--- a/package.yaml
+++ b/package.yaml
@@ -21,10 +21,13 @@ dependencies:
 library:
   source-dirs: src
   dependencies:
+    - attoparsec
     - MonadRandom
     - mtl
     - random-shuffle
+    - text
     - transformers
+    - transformers-either
 
 executables:
   legio-exe:
