--- a/legio.cabal
+++ b/legio.cabal
@@ -21,6 +21,7 @@ source-repository head
 
 library
   exposed-modules:
+      AI.Neuron
       Control.Monad.Extra
       Data.Legio
       Data.Split
@@ -30,10 +31,13 @@ library
       src
   build-depends:
       MonadRandom
+    , attoparsec
     , base >=4.7 && <5
     , mtl
     , random-shuffle
+    , text
     , transformers
+    , transformers-either
   default-language: Haskell2010
 
 executable legio-exe
