--- a/legio.cabal
+++ b/legio.cabal
@@ -43,6 +43,7 @@ library
 executable legio-exe
   main-is: Main.hs
   other-modules:
+      UI.AiPlayer
       UI.ConsolePlayer
       UI.DummyPlayer
       UI.Player
@@ -52,11 +53,14 @@ executable legio-exe
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       MonadRandom
+    , attoparsec
     , base >=4.7 && <5
     , legio
     , mtl
     , random
+    , text
     , transformers
+    , transformers-either
   default-language: Haskell2010
 
 test-suite legio-test
