--- a/package.yaml
+++ b/package.yaml
@@ -38,11 +38,14 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
+    - attoparsec
     - legio
     - MonadRandom
     - mtl
     - random
+    - text
     - transformers
+    - transformers-either
 
 tests:
   legio-test:
