--- a/legio.cabal
+++ b/legio.cabal
@@ -22,6 +22,7 @@ source-repository head
 library
   exposed-modules:
       AI.Neuron
+      AI.Neuron.Perceptron
       Control.Monad.Extra
       Data.Legio
       Data.Split
