--- a/legio.cabal
+++ b/legio.cabal
@@ -42,6 +42,17 @@ library
     , transformers-either
   default-language: Haskell2010
 
+executable exercise
+  main-is: Main.hs
+  other-modules:
+      Paths_legio
+  hs-source-dirs:
+      exercise
+  build-depends:
+      base >=4.7 && <5
+    , legio
+  default-language: Haskell2010
+
 executable legio-exe
   main-is: Main.hs
   other-modules:
