--- a/package.yaml
+++ b/package.yaml
@@ -47,6 +47,12 @@ executables:
     - transformers
     - transformers-either
 
+  exercise:
+    main:               Main.hs
+    source-dirs:        exercise
+    dependencies:
+    - legio
+
 tests:
   legio-test:
     main:                Spec.hs
