Move Legio game to legio directory.

--- a/package.yaml
+++ b/package.yaml
@@ -30,9 +30,9 @@ library:
     - transformers-either
 
 executables:
-  legio-exe:
+  legio:
     main:                Main.hs
-    source-dirs:         app
+    source-dirs:         legio
     ghc-options:
     - -threaded
     - -rtsopts
