--- a/legio.cabal
+++ b/legio.cabal
@@ -54,12 +54,12 @@ executable exercise
     , mtl
   default-language: Haskell2010
 
-executable legio-exe
+executable legio
   main-is: Main.hs
   other-modules:
       Paths_legio
   hs-source-dirs:
-      app
+      legio
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       MonadRandom
