--- a/package.yaml
+++ b/package.yaml
@@ -39,6 +39,7 @@ executables:
     - -with-rtsopts=-N
     dependencies:
     - attoparsec
+    - containers
     - extra
     - legio
     - MonadRandom
