--- a/package.yaml
+++ b/package.yaml
@@ -22,6 +22,7 @@ library:
   source-dirs: src
   dependencies:
     - attoparsec
+    - containers
     - MonadRandom
     - mtl
     - random-shuffle
