--- a/legio.cabal
+++ b/legio.cabal
@@ -42,6 +42,7 @@ library
     , attoparsec
     , base >=4.7 && <5
     , containers
+    , extra
     , mtl
     , random-shuffle
     , text
@@ -78,6 +79,7 @@ executable legio
     , attoparsec
     , base >=4.7 && <5
     , containers
+    , either
     , extra
     , legio
     , mtl
