--- a/legio.cabal
+++ b/legio.cabal
@@ -41,6 +41,7 @@ library
       MonadRandom
     , attoparsec
     , base >=4.7 && <5
+    , bifunctors
     , containers
     , extra
     , megaparsec
